# ascii_painter

./: Cargo.toml  readme.md  todo.md
ascii_painter/: Cargo.toml
ascii_painter/src/: main.rs
canvas/: Cargo.toml
canvas/src/: lib.rs
canvas/test/: arrowed_line.txt  line_with_label.txt  line_with_long_label.txt  rec_with_label.txt
painter/: Cargo.toml
painter/src/: callgraph.rs  lib.rs  main.rs
painter/test/: callgraph.txt  callgraph_multi_section.txt  callgraph_multi_section_res.txt  callgraph_res.txt  callgraph_self_call.txt  callgraph_self_call_res.txt
src/: main.rs
