[package]
name = "ascii_painter"
version = "0.1.0"
authors = ["Ming Yang <yougmark94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "canvas" }

[workspace]

members = [
    "painter",
]
