[package]
name = "ascii_painter"
version = "0.1.0"
authors = ["Mt. Rainier <mountain.rainier@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "../canvas" }
painter = { path = "../painter" }
structopt = "0.3"
atty = "0.2"

